--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^3.0.0",
     "mongodb": "^5.4.0",
+    "mongoose": "^7.1.0",
     "mysql2": "^1.7.0",
     "pug": "^2.0.4",
     "sequelize": "^5.22.5"
